--- a/resources/sass/main-style.scss
+++ b/resources/sass/main-style.scss
@@ -12,7 +12,8 @@ body {
     background-color: $off-white;
     margin-top: -20px;
     transition: all 1s ease-out;
-    overflow: hidden;
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 
 .container {
